Increase heap size for gwt-maven-plugin